2009-06-24  Jason Molenda  (jmolenda@apple.com)

        * macosx-nat-inferior.c (macosx_unsafe_regexes): Look for __spin_lock,
        pthread_mutex_lock, pthread_mutex_unlock, and __spin_unlock when 
	testing for a spinlock being held - we don't have a more accurate 
	way of telling when pthread_mutex_lock is in its critical section.

2009-05-22  Caroline Tice  <ctice@apple.com>

	* macosx-nat-mutils.c (malloc_history_info_command):  Make
	"-exact" be the default, since "-range" has the potential to
	return vast amounts of data with no possible interrupt mechanism.
	
2009-05-11  Jim Ingham  <jingham@apple.com>

	* macosx-nat-mutils.c (do_over_unique_frames): Filter events to
	those containing the requested_address.  Also print out the 
	alloc address
	(malloc_history_info_command): Added -exact & -range, and implement
	the range option.  Also error out if arg is NULL.
	(_initialize_macosx_nat_inferior): Fix the documentation for info
	malloc-history to include the -exact & -range options.
	
2009-05-05  Jim Ingham  <jingham@apple.com>

	* macosx-nat-inferior.c (macosx_load_dylib): Wrong valence in
	the "found dlerror" test.
	(macosx_load_dylib): If the debugger mode api is not available
	fall back on target_check_safe_call.
	
2009-04-22  Jim Ingham  <jingham@apple.com>

	* macosx-nat-inferior.c (macosx_check_safe_call): If we are 
	only checking the current thread, don't call the malloc_unsafe
	or debugger mode functions, which assume you are only running
	one thread.

2009-04-23  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-inferior.c (macosx_check_malloc_is_unsafe): Update call to
        make_cleanup_set_restore_debugger_mode to handle new return codes.
	(macosx_check_safe_call): If we can't enter objc's debugger mode,
	fall back to the old objective-c function name checks.
	(macosx_load_dylib): Update use of 
	make_cleanup_set_restore_debugger_mode.
	* macosx-nat-mutils.c (macosx_allocate_space_in_inferior): Ditto.
	(gc_free_data): Ditto.